@@ -148,6 +148,7 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
 <Module "Krang::CGI::MyPref">
   changed_password              "New password saved."
   changed_search_page_size      "'Search Results/Page' Updated."  
+  error_password_length		"Password must be at least 6 characters long."
 </Module>
 
 <Module "Krang::CGI::MyAlerts">
